[package]
name = "ioe"
version = "0.5.0"
authors = ["Joey Ezechiels <joey.ezechiels@gmail.com>"]
description = "A crate that makes many of the I/O errors in stdlib de/serializable."
edition = "2018"
license = "MIT"

[dependencies]
serde = "1.0"
serde_derive = "1.0"

[dependencies.deltoid]
# version = "0.11"
path = "../deltoid/deltoid"
features = ["snapshot"]
# optional = true

[dependencies.deltoid-derive]
# version = "0.11"
path = "../deltoid/deltoid-derive"
# optional = true
